k8s/local-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.revision-ai.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 3000
    - host: revision-ai.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nginx-service
                port:
                  number: 8081
